argo/networkpolicy-argo-argocd-repo-server.yaml
# Source: argo
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/instance: argo
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.4.4
  name: argo-argocd-repo-server
  namespace: argo
  annotations:
    noa.re/deploy-id: 69c76c6a7861e127
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-server
          app.kubernetes.io/instance: argo
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-application-controller
          app.kubernetes.io/instance: argo
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-notifications-controller
          app.kubernetes.io/instance: argo
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: argocd-applicationset-controller
          app.kubernetes.io/instance: argo
    ports:
    - port: repo-server
      protocol: TCP
  - from:
    - namespaceSelector: {}
    ports:
    - port: metrics
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
      app.kubernetes.io/instance: argo
  policyTypes:
  - Ingress
